poc/tests/errors/test_FplMisspelledConstructor_second_occurrence.fpl
Test.Namespace
{
    theory
    {
        class Nat: obj
        {
            Nat(x: @extDecimal)
            {
                cases
                (
                    case Equals(x,0) :
                        self := Zero()
                    case Equals(x,1) :
                        self := Succ(Zero())
                    case Equals(x,2) :
                        self := Succ(Succ(Zero()))
                    else:
                        // else case addressed using a python delegate
                        self := Succ(py.decrement(x))
                )
            }

            Nat1(x: Int)
            {
                cases
                (
                    case IsGreaterOrEqual(x.RightMember(), x.LeftMember()):
                        self:=x.RightMember()
                    else:
                        self:=undefined
                )
            }
        }
    }
}

##############################

FplMisspelledConstructor:23:16: Misspelled constructor Nat1 (must be named Nat)